# engine

./: CMakeLists.txt  README.md  config.sh  run.sh
core/: CMakeLists.txt
core/include/: base_script.h  compile.h  data_manager.h  debug_message.h  event.h  module_loader.h  pch.h
core/src/: base_script.cpp  compile.cpp  debug_message.cpp  filewatcher.cpp  module_loader.cpp
include/: app.h
script/src/: imgui_script.cpp  window_script.cpp
src/: app.cpp  main.cpp
